@@ -36,6 +36,7 @@ add_action('after_setup_theme', 'synapse_text_domain');
 * Load jQuery and register additional scripts.
 */ 
 function synapse_scripts() {
+	global $options, $themeslug;
 	if ( !is_admin() ) {
 	wp_enqueue_script('jquery');
 	wp_enqueue_script('jquery-ui-tabs');
@@ -48,14 +49,19 @@ function synapse_scripts() {
 	wp_register_script( 'apps' ,$path.'/js/app.js');
 	wp_register_script( 'menu' ,$path.'/js/menu.js');
 	wp_register_script( 'plusone' ,$path.'/js/plusone.js');
-	wp_register_script( 'mobilemenu' ,$path.'/js/mobilemenu.js');
 	
 	wp_enqueue_script ('foundation');
 	wp_enqueue_script ('orbit');
 	wp_enqueue_script ('apps');
 	wp_enqueue_script ('menu');
 	wp_enqueue_script ('plusone');
+	
+	if ($options->get($themeslug.'_responsive_design') == '1' ) {
+	
+	wp_register_script( 'mobilemenu' ,$path.'/js/mobilemenu.js');
 	wp_enqueue_script ('mobilemenu');
+	
+	}
 }
 add_action('wp_enqueue_scripts', 'synapse_scripts');	
 
