@@ -11,6 +11,7 @@ Version 4.0.2 (02-09-12)
 -Further revision to slider arrows.
 -Fixed slider loading screen.
 -Added default styling for Disqus comment system.
+-Moved responsive-only styling out of general stylesheet to fix issues with static design.
 
 Version 4.0.1 (02-06-12)
 -Fixed custom slide category bug for pages.
